--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
 
 
 	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous"> -->
-	<link rel="stylesheet" href="/boo.css">
+    <link rel="stylesheet" href="/css/boo.css">
+    <link rel="stylesheet" href="/css/my.css">
 
   </head>
   <body>
@@ -43,6 +44,7 @@
 
       <div class="row marketing">
         <div class="col">
+          <h4 class="my" id="author" title="GossJS">Алан <span>Тьюринг</span></h4>		
           <h4>DTD</h4>
           <p>Валидация</p>
 
