--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,10 @@
 
       <div class="row marketing">
         <div class="col">
+	<h4 id="author" title="GoddJS">София Куницына</h4>
           <h4>DTD</h4>
           <p>Валидация</p>
+	<a href="https://drive.google.com/file/d/0BzKNyMAvbguFTHBGQkFNN3Q2ZDQ/view?usp=sharing">Ссылка на картинку с проверкой</a>
 
           <h4>Схемы</h4>
           <p>Валидация</p>
@@ -62,7 +64,7 @@
       </div>
 
       <footer class="footer">
-        <p>&copy; Иван Иванов 2017</p>
+        <p>&copy; София Куницына 2017</p>
       </footer>
 
     </div>
