--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta name="author" content="Иван Иванов">
+    <meta name="author" content="София Куницына">
     <link rel="shortcut icon" href="/favicon.ico">
 
     <title>Мои задания</title>
@@ -43,7 +43,7 @@
 
       <div class="row marketing">
         <div class="col">
-	<h4 id="author" title="GoddJS">София Куницына</h4>
+	<h4 id="author" title="GossJS">София Куницына</h4>
           <h4>DTD</h4>
           <p>Валидация</p>
 	<a href="https://drive.google.com/file/d/0BzKNyMAvbguFTHBGQkFNN3Q2ZDQ/view?usp=sharing">Ссылка на картинку с проверкой</a>
